--- a/.github/workflows/clippy_check.yml
+++ b/.github/workflows/clippy_check.yml
@@ -7,7 +7,6 @@ jobs:
       - run: sudo apt-get install -y libasound2-dev
       - uses: actions/checkout@v2
       - run: rustup show
-      - uses: actions-rs/clippy-check@v1
+      - uses: clechasseur/rs-clippy-check@v3
         with:
           args: --all-targets
-          token: ${{ secrets.GITHUB_TOKEN }}
